[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/texture/seed.png" type="Texture" id=1]
[ext_resource path="res://src/pickups/seed.gd" type="Script" id=2]
[ext_resource path="res://src/pickups/player_magnet.gd" type="Script" id=3]
[ext_resource path="res://assets/shader/palette.gdshader" type="Shader" id=4]
[ext_resource path="res://assets/audio/sfx/seed.wav" type="AudioStream" id=5]
[ext_resource path="res://src/test/path/path_finder_dude.gd" type="Script" id=6]
[ext_resource path="res://src/pickups/arrow.gd" type="Script" id=7]
[ext_resource path="res://assets/texture/arrow.png" type="Texture" id=8]
[ext_resource path="res://src/color/palette.tscn" type="PackedScene" id=9]

[sub_resource type="Image" id=11]
data = {
"data": PoolByteArray( 116, 255, 0, 255, 0, 134, 8, 255, 247, 255, 0, 255 ),
"format": "RGBA8",
"height": 1,
"mipmaps": false,
"width": 3
}

[sub_resource type="ImageTexture" id=10]
flags = 0
flags = 0
image = SubResource( 11 )
size = Vector2( 3, 1 )

[sub_resource type="ShaderMaterial" id=8]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/palette_size = 3
shader_param/offset = 0
shader_param/blue_index_offset = 0.0
shader_param/palette = SubResource( 10 )

[sub_resource type="CircleShape2D" id=4]
radius = 5.09902

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "play"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ), Vector2( 0, -2 ) ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 64.0

[node name="seed" type="Area2D" groups=["seed"]]
material = SubResource( 8 )
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "play"
anims/RESET = SubResource( 2 )
anims/play = SubResource( 3 )

[node name="player_magnet" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_magnet"]
shape = SubResource( 5 )

[node name="pickup_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[node name="nav_indicator" type="Node2D" parent="."]
modulate = Color( 0.00784314, 1, 0, 1 )
script = ExtResource( 6 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="nav_indicator"]
avoidance_enabled = true
neighbor_dist = 1000.0
max_speed = 1000.0

[node name="Line2D" type="Line2D" parent="nav_indicator"]
visible = false
points = PoolVector2Array( 48, 7.99999, 8, 32, -40, 24, -24, -16, 0, -40, 40, -32, 56, -8, 64, 8 )
width = 1.0
default_color = Color( 0.4, 0.501961, 1, 1 )

[node name="arrow" type="Sprite" parent="nav_indicator"]
texture = ExtResource( 8 )
script = ExtResource( 7 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
lifetime = 2.0
local_coords = false
spread = 180.0
gravity = Vector2( 0, 24 )
initial_velocity = 5.0

[node name="Sprite" type="Sprite" parent="."]
use_parent_material = true
texture = ExtResource( 1 )

[node name="palette" parent="." instance=ExtResource( 9 )]
palette = PoolColorArray( 0.454902, 1, 0, 1, 0, 0.52549, 0.0313726, 1, 0.968627, 1, 0, 1 )
material = SubResource( 8 )

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
